--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,11 @@
                 background-color: black;
                 color: white;
                 border-radius: 5px;
-				border: hidden;
+				border: none;
             }
             #btn:hover{
                 background-color: yellow;
                 color: black;
                 border-radius: 30px;
-				border: hidden;
+				border: none;
             }
